--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Galeria</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png"  href="img/ico.png">
 </head>
 <body>
-
+    <h1>Pedro Delgado galeria</h1>
 </body>
 </html>
