--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <link rel="icon" type="image/png"  href="img/ico.png">
 </head>
 <body>
-    <h1>Pedro Delgado galeria</h1>
+    <div id="container">
+        <header>
+            <h1>Pedro Delgado Galeria</h1>
+            <ul>
+                <li><a href="#" class="active">Fotografia</a></li>
+                <li><a href="#">Sobre mi</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </header>
+        <div id="sidebar">
+            <ul>
+                <li><a href="#" class="active">Las mejores</a></li>
+                <li><a href="#">Retratos</a></li>
+                <li><a href="#">Paisajes</a></li>
+                <li><a href="#">Urbano</a></li>
+                <li><a href="#">Animales</a></li>
+            </ul>
+        </div>
+        <section id="photo-container">
+            
+        </section>
+    </div>
+    <footer>&copy; Pedro Delgado QWERTY</footer>
+    <script src="js/main.js"></script>
 </body>
 </html>
